--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <div class="links">
                             <a href="https://www.linkedin.com/in/caio-colli-75a431240"><img
                                     src="images/icon/linkedin.svg" alt=""></a>
-                            <a href="https://github.com/CaioColli"><img src="Images/icon/github.svg" alt=""></a>
+                            <a href="https://github.com/CaioColli"><img src="images/icon/github.svg" alt=""></a>
                         </div>
                         <p class="centralizar__copyright copyright">©copyright - CaioColli - caiocolli22@gmail.com
                         </p>
