--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/main home.css">
 </head>
 
 <body>
@@ -21,7 +22,7 @@
     <header class="cabecalho">
         <figure class="wicther__logo">
             <a href=""><img src="images/witcher3wikilogo.png" alt="" class="logo_witcher__header"></a>
-        </figure>       
+        </figure>
     </header>
 
     <main>
@@ -44,7 +45,10 @@
                                         class="img__lobo"></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="#">The Witcher 3: Wild Hunt</a>
+                                <a class="nav-link active" href="index.html">Início</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="witcher3.html">The Witcher 3: Wild Hunt</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#" data-bs-toggle="modal"
@@ -70,7 +74,7 @@
                 </div>
             </div>
         </nav>
-        
+
         <article class="secao__apresentacao">
             <div class="apresentacao mt-2">
                 <span onclick="openNav()"><button class="menu__burguer burguer"><svg xmlns="http://www.w3.org/2000/svg"
@@ -81,12 +85,15 @@
                 <h1 class="titulo__principal">Bem vindo</h1>
             </div>
 
+            <!--Sidenav-->
             <div id="mySidenav" class="sidenav">
-                <a href="#"><img src="images/witcher3.png" alt="" class="img__sidenav"></a>
+                <a href="witcher3.html"><img src="images/witcher3.png" alt="" class="img__sidenav"></a>
                 <a href="#"><img src="images/witchernetflix.png" alt="" class="img__sidenav"></a>
                 <a href="#"><img src="images/gwent.png" alt="" class="img__sidenav"></a>
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             </div>
+            <!--Sidenav-->
+
             <!--DESKTOP-->
             <div class="conteudos__apresentacao">
                 <div class="box__sobre">
@@ -225,7 +232,6 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
         integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous">
-    </script>
     </script>
     <script src="javascript/index.js"></script>
 
