--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <header class="cabecalho">
         <figure class="wicther__logo">
-            <a href=""><img src="images/witcher3wikilogo.png" alt="" class="logo_witcher__header"></a>
+            <a href=""><img src="images/witcherwiki.png" alt="" class="logo_witcher__header"></a>
         </figure>
     </header>
 
@@ -109,6 +109,7 @@
                     </div>
                 </div>
                 <!--DESKTOP-->
+
                 <p class="conteudo__texto">Bem-vindo ao Oficial Witcher Wiki sua fonte para todas as coisas
                     relacionadas a The Witcher e as adaptações pela CD PROJEKT RED, e Netflix. Convido você a
                     entrar, explorar o mundo de The Witcher comigo.</p>
@@ -159,7 +160,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <a href="#"><img src="images/carrossel (2).png" alt="..."
+                        <a href="witcher3.html"><img src="images/carrossel (2).png" alt="..."
                                 class="d-block w-100 img__carrossel"></a>
                         <div class="carousel-caption d-md-block">
                             <h5 class="titulo__corrossel">The Witcher 3: Wild Hunt</h5>
